--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,900&display=swap");
-* {
+body {
+  font-family: "Noto Sans", sans-serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -7,56 +8,57 @@
   list-style-type: none;
 }
 
-body {
-  font-family: "Noto Sans", sans-serif;
+header {
+  margin: 0 auto;
 }
-
 header .navbar {
   display: flex;
   justify-content: space-between;
   background: #000;
-  width: 100%;
-  height: 80px;
+  height: 70px;
+  box-shadow: 0 10px 15px rgba(0, 0, 0, 0.2);
   align-items: center;
-  padding: 0 5%;
+  padding: 1rem 5%;
   transition: all 0.4s ease-in-out;
 }
-header .navbar .nav-logo .logo {
-  color: #fff;
-  font-size: 30px;
+header .navbar .nav-logo .image {
+  height: auto;
 }
-header .navbar .nav-logo .logo span {
-  color: #00a2e2;
+header .navbar ul {
+  padding: 0;
 }
-header .navbar .nav-menu {
-  display: flex;
-  list-style: none;
-}
-header .navbar .nav-menu .nav-item {
-  padding: 0.75rem 1.8rem;
+header .navbar ul li {
   position: relative;
-}
-header .navbar .nav-menu .nav-item .dropdown-menu {
-  display: block;
-  position: absolute;
-  left: 0;
-  top: 100%;
+  list-style: none;
+  display: inline-block;
   background-color: #000;
 }
-header .navbar .nav-menu .nav-item .dropdown-menu .nav-menu {
+header .navbar ul li a {
   display: block;
-  margin: 10px;
-}
-header .navbar .nav-menu .nav-item .dropdown-menu .nav-menu .nav-item {
-  width: 9.375rem;
-  padding: 10px;
-}
-header .navbar .nav-menu .nav-item .nav-link {
+  padding: 0 1rem;
   color: #fff;
   text-decoration: none;
-  font-size: 1.2;
-  transition: all 0.4s ease-in-out;
+  line-height: 3.5rem;
+  font-size: 1rem;
 }
-header .navbar .nav-menu .nav-item .nav-link:hover {
-  color: #00a2e2;
+header .navbar ul li a:hover {
+  background-color: #00a2e2;
+}
+header .navbar ul li:hover > ul {
+  display: block;
+}
+header .navbar ul ul {
+  position: absolute;
+  top: 3.25rem;
+  display: none;
+}
+header .navbar ul ul li {
+  width: 17rem;
+  position: relative;
+}
+header .navbar ul ul ul li {
+  width: 14rem;
+  position: relative;
+  top: -1.25rem;
+  left: 17rem;
 }/*# sourceMappingURL=style.css.map */
