--- a/style.scss
+++ b/style.scss
@@ -1,7 +1,8 @@
 @import 'config';
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,900&display=swap');
 
-*{
+body{
+    font-family: $font-stack;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -9,72 +10,74 @@
     list-style-type: none;
 }
 
-body{
-    font-family: $font-stack;
-}
-
 
 header{
 
+    margin: 0 auto;
     .navbar{
         display: flex;
         justify-content: space-between;
         background:#000;
-        width: 100%;
-        height: 80px;
+        height: 70px;
+        box-shadow: 0 10px 15px rgba(0,0,0, 0.2);
         align-items: center;
-        padding: 0 5%;
+        padding: 1rem 5%;
         transition: all .4s ease-in-out;
 
         .nav-logo{
 
-            .logo{
-                color: $color-white;
-                font-size: 30px;
-
-                span{
-                    color:$primary-color;
-                }
+            .image{
+                // padding: 5px 0 0 80px;
+                height: auto;
             }
         }
-        .nav-menu{
-            display: flex;
-            list-style: none;
 
-            .nav-item{
-                padding: .75rem 1.8rem;
-                position: relative ;
+        ul{
+            padding: 0;
+            // display: flex;
+            li{
+                position: relative;
+                list-style: none;
+                display: inline-block;
+                background-color: $secondary-color;
 
-                .dropdown-menu{
+                a{
                     display: block;
-                    position: absolute;
-                    left: 0;
-                    top: 100%;
-
-                    background-color: $secondary-color;
-
-
-                    .nav-menu{
-                        display: block;
-                        margin: 10px;
-
-
-                        .nav-item{
-                            width:9.375rem;
-                            padding: 10px;
-                            
-                        }
-                    }
-                }
-
-                .nav-link{
+                    padding: 0 1rem;
                     color: $color-white;
                     text-decoration: none;
-                    font-size: 1.2;
-                    transition: all .4s ease-in-out;
+                    line-height: 3.5rem;
+                    font-size: 1rem;
 
                     &:hover{
-                        color: $primary-color;
+                        background-color: $primary-color;
+                    }
+
+                    
+                }
+
+                &:hover>ul{
+                    display: block;
+                }
+            }
+
+            ul{
+                position: absolute;
+                top: 3.25rem;
+                display: none;
+
+                li{
+                    width: 17rem;
+                    // display: list-item;
+                    position: relative;
+                }
+
+                ul{
+                    li{
+                        width: 14rem;
+                        position: relative;
+                        top: -1.25rem;
+                        left: 17rem;
                     }
                 }
             }
